Fix spacing in links

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -277,6 +277,9 @@ $f-body: 'Roboto', sans-serif;
               }
             }
           }
+          .contact-links {
+            margin-bottom: 2em;
+          }
           .bio {
             p:first-of-type {
               margin-bottom: 1em;
